WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270213
Fix build when LAYER_BASED_SVG_ENGINE is off
https://bugs.webkit.org/show_bug.cgi?id=270213
Summary
Fix build when LAYER_BASED_SVG_ENGINE is off
Takashi Komori
Reported
2024-02-27 21:05:13 PST
Build fails when LAYER_BASED_ENGINE is off because SettingBase::layerBasedSVGEngineEnabledChanged() does not exist.
Attachments
Add attachment
proposed patch, testcase, etc.
Takashi Komori
Comment 1
2024-03-03 20:34:26 PST
Pull request:
https://github.com/WebKit/webkit/pull/25400
EWS
Comment 2
2024-03-04 18:54:01 PST
Committed
275668@main
(5651f991dcb7): <
https://commits.webkit.org/275668@main
> Reviewed commits have been landed. Closing PR #25400 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-03-04 18:55:20 PST
<
rdar://problem/124047159
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug