Build fix when LAYER_BASED_SVG_ENGINE is off https://bugs.webkit.org/show_bug.cgi?id=270213

Reviewed by Fujii Hironori.

Build fix by checking LAYER_BASED_SVG_ENGINE option.

* Source/WebCore/rendering/svg/RenderSVGResourceMarker.h:
* Source/WebCore/rendering/svg/RenderSVGResourceMasker.h:
* Source/WebCore/svg/SVGClipPathElement.cpp:
* Source/WebCore/svg/SVGMaskElement.cpp:

Canonical link: https://commits.webkit.org/275668@main